implemented deletion for tasks

--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -568,6 +568,6 @@
         <image name="Starfish" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="3iy-CS-klH"/>
+        <segue reference="AEp-jo-Cf1"/>
     </inferredMetricsTieBreakers>
 </document>
