--- a/MultiTask/PendingTaskCell.xib
+++ b/MultiTask/PendingTaskCell.xib
@@ -8,15 +8,10 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="HelveticaNeue.ttc">
-            <string>HelveticaNeue</string>
-        </array>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="TaskCell" id="p7J-gl-UBk" customClass="TaskCell" customModule="MultiTask" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PendingTaskCell" id="p7J-gl-UBk" customClass="PendingTaskCell" customModule="MultiTask" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="377" height="159"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -30,7 +25,7 @@
                                 <rect key="frame" x="16" y="8" width="345" height="143"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subtitleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sas-4I-tGq">
-                                        <rect key="frame" x="16" y="105" width="78" height="15"/>
+                                        <rect key="frame" x="16" y="97" width="78" height="15"/>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="15" id="UsM-lW-ZPv"/>
@@ -40,7 +35,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Byg-dO-88g">
-                                        <rect key="frame" x="16" y="120" width="114.5" height="15"/>
+                                        <rect key="frame" x="16" y="112" width="114.5" height="15"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ilO-rp-Mli">
                                                 <rect key="frame" x="0.0" y="0.0" width="52" height="15"/>
@@ -62,9 +57,9 @@
                                         </constraints>
                                     </stackView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hmh-Md-RSS">
-                                        <rect key="frame" x="16" y="8" width="61" height="89"/>
+                                        <rect key="frame" x="16" y="16" width="63" height="73"/>
                                         <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -76,8 +71,8 @@
                                     <constraint firstItem="hmh-Md-RSS" firstAttribute="leading" secondItem="tYf-km-5DM" secondAttribute="leading" constant="16" id="1Ay-MQ-s0n"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Byg-dO-88g" secondAttribute="trailing" constant="16" id="MIC-ZB-s5G"/>
                                     <constraint firstItem="Byg-dO-88g" firstAttribute="leading" secondItem="tYf-km-5DM" secondAttribute="leading" constant="16" id="Q7v-Nz-uxv"/>
-                                    <constraint firstAttribute="bottom" secondItem="Byg-dO-88g" secondAttribute="bottom" constant="8" id="Ybt-fx-vCE"/>
-                                    <constraint firstItem="hmh-Md-RSS" firstAttribute="top" secondItem="tYf-km-5DM" secondAttribute="top" constant="8" id="bt9-1S-n92"/>
+                                    <constraint firstAttribute="bottom" secondItem="Byg-dO-88g" secondAttribute="bottom" constant="16" id="Ybt-fx-vCE"/>
+                                    <constraint firstItem="hmh-Md-RSS" firstAttribute="top" secondItem="tYf-km-5DM" secondAttribute="top" constant="16" id="bt9-1S-n92"/>
                                     <constraint firstItem="Byg-dO-88g" firstAttribute="top" secondItem="Sas-4I-tGq" secondAttribute="bottom" id="dlm-Bi-kJc"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="hmh-Md-RSS" secondAttribute="trailing" constant="16" id="pJ2-JV-SQ5"/>
                                     <constraint firstItem="Sas-4I-tGq" firstAttribute="leading" secondItem="tYf-km-5DM" secondAttribute="leading" constant="16" id="vkQ-ah-Eju"/>
