--- a/MultiTask/TasksTab.storyboard
+++ b/MultiTask/TasksTab.storyboard
@@ -332,7 +332,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nDK-zE-hF6">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="aaZ-22-8pr">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="b7R-HW-qGI">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -356,7 +356,7 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="nDK-zE-hF6" id="xPF-FP-oHM"/>
-                        <outlet property="collectionViewFlowLayout" destination="aaZ-22-8pr" id="jCf-Ya-yXS"/>
+                        <outlet property="collectionViewFlowLayout" destination="b7R-HW-qGI" id="qhD-6h-jRJ"/>
                         <segue destination="4U5-QD-6XH" kind="show" identifier="PendingTaskCellToItemsViewController" id="AEp-jo-Cf1"/>
                     </connections>
                 </viewController>
@@ -375,7 +375,7 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="eRh-tg-jV6">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="itM-F6-Sxs">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zEY-8K-gmO">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -399,7 +399,7 @@
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="eRh-tg-jV6" id="dtu-Lh-WHH"/>
-                        <outlet property="collectionViewFlowLayout" destination="itM-F6-Sxs" id="dXf-gp-c2b"/>
+                        <outlet property="collectionViewFlowLayout" destination="zEY-8K-gmO" id="pZ9-K4-zNs"/>
                         <segue destination="4U5-QD-6XH" kind="show" identifier="CompletedTaskCellToItemsViewController" id="3iy-CS-klH"/>
                     </connections>
                 </viewController>
@@ -568,6 +568,6 @@
         <image name="Starfish" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="AEp-jo-Cf1"/>
+        <segue reference="3iy-CS-klH"/>
     </inferredMetricsTieBreakers>
 </document>
