--- a/MultiTask/ItemCell.xib
+++ b/MultiTask/ItemCell.xib
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="258" height="112.5"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="titleTextView" textAlignment="justified" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9TT-hU-Fuw">
-                                <rect key="frame" x="16" y="8" width="86.5" height="65.5"/>
+                                <rect key="frame" x="16" y="16" width="86.5" height="49.5"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
@@ -29,7 +29,7 @@
                                 <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES" shipmentTrackingNumber="YES" flightNumber="YES" lookupSuggestion="YES"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subtitleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ckK-h4-crJ">
-                                <rect key="frame" x="16" y="73.5" width="68" height="15"/>
+                                <rect key="frame" x="16" y="65.5" width="68" height="15"/>
                                 <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="SHg-UL-mj2"/>
@@ -39,7 +39,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="ot4-0g-sdQ">
-                                <rect key="frame" x="16" y="88.5" width="142.5" height="15"/>
+                                <rect key="frame" x="16" y="80.5" width="142.5" height="15"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dateLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPu-Cd-47D">
                                         <rect key="frame" x="0.0" y="0.0" width="52" height="15"/>
@@ -64,13 +64,13 @@
                                 <rect key="frame" x="0.0" y="111.5" width="258" height="1"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="0.5" id="038-30-3OQ"/>
+                                    <constraint firstAttribute="height" constant="0.29999999999999999" id="038-30-3OQ"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="9TT-hU-Fuw" firstAttribute="top" secondItem="cKm-45-CUT" secondAttribute="top" constant="8" id="44V-YS-A8S"/>
+                            <constraint firstItem="9TT-hU-Fuw" firstAttribute="top" secondItem="cKm-45-CUT" secondAttribute="top" constant="16" id="44V-YS-A8S"/>
                             <constraint firstItem="AnC-KY-4i7" firstAttribute="leading" secondItem="cKm-45-CUT" secondAttribute="leading" id="7uH-Xo-g7G"/>
                             <constraint firstItem="9TT-hU-Fuw" firstAttribute="leading" secondItem="cKm-45-CUT" secondAttribute="leading" constant="16" id="8R6-Tu-9Yk"/>
                             <constraint firstAttribute="bottom" secondItem="AnC-KY-4i7" secondAttribute="bottom" id="Di4-JE-vRj"/>
@@ -79,7 +79,7 @@
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ckK-h4-crJ" secondAttribute="trailing" constant="16" id="OyN-f1-1KO"/>
                             <constraint firstItem="ckK-h4-crJ" firstAttribute="leading" secondItem="cKm-45-CUT" secondAttribute="leading" constant="16" id="aqt-uu-GMj"/>
                             <constraint firstItem="ot4-0g-sdQ" firstAttribute="top" secondItem="ckK-h4-crJ" secondAttribute="bottom" id="fD7-hl-brs"/>
-                            <constraint firstItem="AnC-KY-4i7" firstAttribute="top" secondItem="ot4-0g-sdQ" secondAttribute="bottom" constant="8" id="fH5-Xb-22H"/>
+                            <constraint firstItem="AnC-KY-4i7" firstAttribute="top" secondItem="ot4-0g-sdQ" secondAttribute="bottom" constant="16" id="fH5-Xb-22H"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ot4-0g-sdQ" secondAttribute="trailing" constant="16" id="kJM-l5-3d8"/>
                             <constraint firstItem="ot4-0g-sdQ" firstAttribute="leading" secondItem="cKm-45-CUT" secondAttribute="leading" constant="16" id="kLS-MU-U7N"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="9TT-hU-Fuw" secondAttribute="trailing" constant="16" id="prN-Hd-HU8"/>
